tests-integration/tests/roundtrip/invalid/semantic/typecheck/tuple_literal_in_aggregate_expr/input.essence
find x : int(1..10)
such that min((5, 3)) = 1